test/functions/vass/proc-iter/error-void-nonvoid-returns-types-1.good
error-void-nonvoid-returns-types-1.chpl:2: In function 'p11f':
error-void-nonvoid-returns-types-1.chpl:3: error: Invalid mix of 'return's
error-void-nonvoid-returns-types-1.chpl:3: note: this one does not return anything
error-void-nonvoid-returns-types-1.chpl:3: note: this one returns something
